--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h5>Molnár Péter</h5>
     <h6>Molnár Péter</h6>
 
-    <img src="img/kollazs.jpg" alt="Itt látható rólam egy kollázs kép" title="kollazs" width="400">
+    <img src="img/GOW5.jpg" alt="Szeretem a GOW Ragnarököt" title="GOW 5" width="400">
     
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porta semper lorem eu vestibulum. Phasellus
         lacinia, urna ut mollis facilisis, arcu nisi auctor quam, non lacinia turpis quam at magna. Quisque tincidunt
