--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h5>Molnár Péter</h5>
     <h6>Molnár Péter</h6>
 
+    <a href="keplink.html">KÉPLINK FELADAT</a>
+
     <img src="img/GOW5.jpg" alt="Szeretem a GOW Ragnarököt" title="GOW 5" width="400">
     
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porta semper lorem eu vestibulum. Phasellus
