--- a/keplink.html
+++ b/keplink.html
@@ -10,7 +10,7 @@
 
     <h1>Kép + Link Feladat</h1>
 
-    <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimage.api.playstation.com%2Fvulcan%2Fap%2Frnd%2F202207%2F1210%2FaqZdSwWyy9JcQ66BxHDKrky6.jpg&tbnid=SUFw4g445lHQyM&vet=12ahUKEwi3x8OF9_KBAxVm4AIHHY2DCDsQMygBegQIARBF..i&imgrefurl=https%3A%2F%2Fwww.playstation.com%2Fen-hu%2Fgames%2Fgod-of-war-ragnarok%2F&docid=-dRU6QmhptwDQM&w=3840&h=2160&q=god%20of%20war&ved=2ahUKEwi3x8OF9_KBAxVm4AIHHY2DCDsQMygBegQIARBF">
+    <a href="https://www.playstation.com/en-hu/games/god-of-war-ragnarok/">
         <img src="img/GOW5.jpg" alt="GOW5" title="GOW5" width="400"
     </a>
 
