--- a/Listák.html
+++ b/Listák.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <a href="index.html">LISTÁK FELADAT</a>
-<p>Kedvenc Tantárgyaim:</p>
+<strong>Kedvenc Tantárgyaim:</strong>
 <h1>1. Komplex természettudomány</h1>
 <h2>2. IKT projektmunka</h2>
 <h3>3. Matematika</h3>
-<p>Hobbijaim:</p>
+<strong>Hobbijaim:</strong>
 <h1> videojátékozás</h1>
 <h2> Videó nézés</h2>
 </body>
