--- a/Listák.html
+++ b/Listák.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">LISTÁK FELADAT</a>
+    <a href="index.html">Vissza a Főoldalra</a>
 <strong>Kedvenc Tantárgyaim:</strong>
-<h1>1. Komplex természettudomány</h1>
-<h2>2. IKT projektmunka</h2>
-<h3>3. Matematika</h3>
+<p>1. Komplex természettudomány</p>
+<p>2. IKT projektmunka</p>
+<p>3. Matematika</p>
 <strong>Hobbijaim:</strong>
-<h1> videojátékozás</h1>
-<h2> Videó nézés</h2>
+<p>Videójátékozás</p>
+<p> Videó nézés</p>
 </body>
 </html>
