--- a/Listák.html
+++ b/Listák.html
@@ -23,7 +23,7 @@
 <ol>
     <li>Videojáték</li>
     <li>Film nézés</li>
-    <li>https://www.youtube.com/watch?v=dQw4w9WgXcQ</li>
+    <li><link rel="stylesheet" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"></li>
 </ol>
     <a href="index.html">VISSZA</a>
 </body>
