--- a/Listák.html
+++ b/Listák.html
@@ -18,12 +18,11 @@
         <li>Nyelvtan</li>
     </ol>
 
-    <h1>Hobbijaim</h1>
+    <h1>Hobbijaim:</h1>
 
 <ol>
     <li>Videojáték</li>
     <li>Film nézés</li>
-    <li><link rel="stylesheet" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"></li>
 </ol>
     <a href="index.html">VISSZA</a>
 </body>
